charon/tests/ui/simple/defaulted-rpitit.2.out
error: Unexpected error: could not find the type variable Self
 --> tests/ui/simple/defaulted-rpitit.2.rs:5:15
  |
5 |         Self: Sized,
  |               ^^^^^

ERROR Charon failed to translate this code (1 errors)
